<resources>
    <string name="app_name">MotoPotato</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="monitoring">Monitoring</string>
    <string name="travel_history">Travel History</string>
    <string name="accident_history">Accident History</string>
    <string name="clubs">Clubs</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_format">%1$f, %2$f</string>
    <string name="close_nav">Close Drawer</string>
    <string name="open_nav">Open Drawer</string>
    <!-- Clubs xml -->
    <string name="click_here_to_see_more">About</string>
    <string name="you_ve_reached_the_next_screen">You\'ve reached the next screen!</string>
    <string name="about_intelliboys">ABOUT INTELLIBOYS</string>
    <string name="our_mission">OUR MISSION</string>
    <string name="contact_us">Contact us</string>
    <string name="about">Welcome to intelliboys, where passion for motors and the open road come together! Established in 2020, our club is a community of motor enthusiasts who share a love for everything on wheels, whether it\'s motorcycles, cars, or even off-road vehicles.</string>
    <string name="mission">Our mission is to unite motor lovers under one banner, fostering camaraderie, safety, and adventure through organized rides. We believe in celebrating the spirit of freedom, the art of mechanics, and the joy of being on the road.</string>
    <string name="address">Address: 123 main street city state zip</string>
    <string name="phone">Phone: 123 456 7890</string>
    <string name="email">Email: intelliboy@gmail.com</string>
    <string name="joined">Join us today and become part of a family that shares your passion for motors! At intelliboys, it\'s not just about the destination—it\'s about the journey and the people you meet along the way.</string>
    <!-- Clubs list -->

    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="middlename">Middlename</string>
    <string name="male">Male</string>
    <string name="birth_date">Birth Date</string>
    <string name="save">SAVE</string>

    <string name="user_name">MARAON, JEROME D.</string>
    <string name="female">Female</string>
    <string name="show_my_location">SHOW MY LOCATION</string>
    <string name="button">Create</string>
    <string name="my_clubs">MY CLUBS</string>
    <string name="member_logo">Member Logo</string>
    <string name="intelliboys_club">INTELLIBOYS CLUB</string>
    <string name="member_logo1">Member Logo1</string>
    <string name="maddog_club">MADDOG CLUB</string>
    <string name="member_logo2">Member Logo2</string>
    <string name="indios_club">INDIOS CLUB</string>
    <string name="member_logo3">Member Logo3</string>
    <string name="royale_club">ROYALE CLUB</string>
    <string name="create">Create</string>
    <string name="enter_club_name">Enter Club Name</string>
    <string name="enter_club_theme">Enter Club Theme</string>
    <string name="choose_logo">Choose Logo</string>
    <string name="club_logo">Club Logo</string>
    <string name="create_club">Create Club</string>
    <string name="speed_0_km_h">Speed: 0 km/h</string>
    <string name="choose_where_to_start">Choose where to start</string>
    <string name="choose_destination">Choose destination</string>
    <string name="circle">circle</string>

    <string name="speed_text">Speed: %1$.2f km/h</string>
    <string name="status_over_speeding">Status: Over Speeding!</string>
    <string name="status_normal">Status: Normal</string>
    <string name="helmet_detected">helmet detected</string>
    <string name="no_helmet_detected">no helmet detected</string>
    <string name="camera_permission_denied">camera permission</string>

</resources>