<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile_update.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfilePic"
            android:layout_width="117dp"
            android:layout_height="128dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/user"
            app:civ_border_color="#85837e"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/changeProfilePic"
            android:layout_width="24dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/userProfilePic"
            app:layout_constraintEnd_toEndOf="@+id/userProfilePic"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/userProfilePic"
            app:layout_constraintTop_toTopOf="@+id/userProfilePic"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/userDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:text="@string/user_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/userProfilePic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userDisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/userDisplayName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/userDisplayName"
            app:layout_constraintTop_toBottomOf="@+id/userDisplayName" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/ic_edit"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintEnd_toEndOf="@+id/userDisplayName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/userProfilePic"
            app:layout_constraintTop_toBottomOf="@+id/userProfilePic" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/ic_edit"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintEnd_toEndOf="@+id/editLastName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editLastName"
            app:layout_constraintTop_toBottomOf="@+id/editLastName" />

        <EditText
            android:id="@+id/editMiddleName"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/ic_edit"
            android:ems="10"
            android:hint="@string/middlename"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintEnd_toEndOf="@+id/editFirstName"
            app:layout_constraintStart_toStartOf="@+id/editFirstName"
            app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:paddingStart="18dp"
            app:layout_constraintEnd_toEndOf="@+id/editMiddleName"
            app:layout_constraintStart_toStartOf="@+id/editMiddleName"
            app:layout_constraintTop_toBottomOf="@+id/editMiddleName"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/userBirthDate"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/ic_edit"
            android:ems="10"
            android:hint="@string/birth_date"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
            app:layout_constraintStart_toStartOf="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <EditText
            android:id="@+id/userAddress"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/ic_edit"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_constraintEnd_toEndOf="@+id/userBirthDate"
            app:layout_constraintStart_toStartOf="@+id/userBirthDate"
            app:layout_constraintTop_toBottomOf="@+id/userBirthDate"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="128dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userAddress"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/userAddress"
            app:layout_constraintTop_toBottomOf="@+id/userAddress"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>